feat(Queue, Game): added a queue and game

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,9 @@
     "skipDefaultLibCheck": true,
     "resolveJsonModule": true,
     "importHelpers": true,
-    "strictNullChecks": true,
     "noImplicitAny": true,
     "noImplicitThis": true,
-    "noImplicitOverride": true,
-    "strictPropertyInitialization": true
+    "noImplicitOverride": true
   },
 
   "include": ["./src/**/*"],
