--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "npx tsc --build",
     "clean": "npx tsc --build --clean",
-    "dev": "npx ts-node ./src/index.ts"
+    "dev": "npx ts-node ./src/index.ts",
+    "start": "node out/index.js",
+    "clean-start": "npm run clean && npm run build && npm run start"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,9 @@
   "homepage": "https://github.com/BananasAmIRite/TicTacToe-Server#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "runtypes": "^6.3.1",
     "short-unique-id": "^4.3.3",
+    "tslib": "^2.3.0",
     "ws": "^7.5.3"
   },
   "devDependencies": {
